@@ -19,6 +19,7 @@ Hbase Change Log
    HBASE-469   Streamline HStore startup and compactions
    HBASE-544   Purge startUpdate from internal code and test cases
    HBASE-557   HTable.getRow() should receive RowResult objects
+   HBASE-452   "region offline" should throw IOException, not IllegalStateException
 
 Release 0.1.0
 
